Partially refactored the whole application. [INCOMPLETE]

--- a/front-end/chat-app.html
+++ b/front-end/chat-app.html
@@ -22,7 +22,11 @@
       <span id="status">Connecting...</span>
       <input type="text" id="input" disabled="disabled" />
     </div>
-    <script src="./jquery.min.js">
+    <!-- <script src="./jquery.min.js"> -->
+      <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
     </script>
     <script src="./frontend.js"></script>
   </body>
