Completed Refactoring of Websocket Server Code

--- a/front-end/chat-app.html
+++ b/front-end/chat-app.html
@@ -17,6 +17,9 @@
   </style>
   </head>
   <body>
+    <select id="user_list">
+      <option value="">BROADCAST</option>
+    </select>
     <div id="content"></div>
     <div>
       <span id="status">Connecting...</span>
